jte finished